feat: main realisation

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+
+}
+
+.GridPokemons{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(5,1fr);
+  gap: 30px;
+
 }
 
 .App-logo {
