--- a/src/Card.css
+++ b/src/Card.css
@@ -4,13 +4,18 @@
     background-color: pink;
     /* display: flex;
     flex-direction: row; */
-
-
+    
 }
+
+.CardBox:hover{
+    transform: scale(1.1)
+}
+
+
 
 .ModalContainer{
     z-index: 1;
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,10 +24,51 @@
 }
 
 .Modal{
-    background-color: blue;
+    background-color: rgb(255, 95, 121);
+    border-radius: 10px;
     color: yellow;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
 
+.modal-header{
+    display: flex;
+    justify-content: end;
 
+}
+.modal-body{
 
+}
 
+.modal-body-stats{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.modal-body-stats-stat{
+    /* margin: 0 10px; */
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid red;
+}
+
+.modal-body-stats-stat-name{
+    text-transform: capitalize;
+    padding: 10px;
+}
+.modal-body-stats-stat-value{
+    padding: 10px;
+}
+.pokemon-name{
+    cursor: pointer;
+
+}
+
+.card-pokemon-name{
+    font-size: 20px;
+    color: blue;
+    text-transform: capitalize;
 }
